--- a/deps/rust/crates/BUILD.serde_core-1.0.226.bazel
+++ b/deps/rust/crates/BUILD.serde_core-1.0.226.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "wasm_bindgen_shared",
+    name = "serde_core",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,6 +29,13 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "alloc",
+        "default",
+        "rc",
+        "result",
+        "std",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -36,15 +43,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen-shared",
+        "crate-name=serde_core",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.103",
+    version = "1.0.226",
     deps = [
-        "@crates_vendor__unicode-ident-1.0.19//:unicode_ident",
-        "@crates_vendor__wasm-bindgen-shared-0.2.103//:build_script_build",
+        "@crates_vendor__serde_core-1.0.226//:build_script_build",
     ],
 )
 
@@ -67,6 +73,13 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "alloc",
+        "default",
+        "rc",
+        "result",
+        "std",
+    ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
     data = glob(
@@ -82,19 +95,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    links = "wasm_bindgen",
-    pkg_name = "wasm-bindgen-shared",
+    pkg_name = "serde_core",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen-shared",
+        "crate-name=serde_core",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.103",
+    version = "1.0.226",
     visibility = ["//visibility:private"],
 )
 
