--- a/deps/rust/crates/BUILD.wasm-bindgen-shared-0.2.104.bazel
+++ b/deps/rust/crates/BUILD.wasm-bindgen-shared-0.2.104.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "serde_core",
+    name = "wasm_bindgen_shared",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,13 +29,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "alloc",
-        "default",
-        "rc",
-        "result",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -43,14 +36,15 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_core",
+        "crate-name=wasm-bindgen-shared",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.225",
+    version = "0.2.104",
     deps = [
-        "@crates_vendor__serde_core-1.0.225//:build_script_build",
+        "@crates_vendor__unicode-ident-1.0.19//:unicode_ident",
+        "@crates_vendor__wasm-bindgen-shared-0.2.104//:build_script_build",
     ],
 )
 
@@ -73,13 +67,6 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "alloc",
-        "default",
-        "rc",
-        "result",
-        "std",
-    ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
     data = glob(
@@ -95,18 +82,19 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    pkg_name = "serde_core",
+    links = "wasm_bindgen",
+    pkg_name = "wasm-bindgen-shared",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_core",
+        "crate-name=wasm-bindgen-shared",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.225",
+    version = "0.2.104",
     visibility = ["//visibility:private"],
 )
 
