--- a/deps/rust/crates/BUILD.hstr-2.1.0.bazel
+++ b/deps/rust/crates/BUILD.hstr-2.1.0.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "wasm_bindgen_macro_support",
+    name = "hstr",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,17 +35,17 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen-macro-support",
+        "crate-name=hstr",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.103",
+    version = "2.1.0",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.101//:proc_macro2",
-        "@crates_vendor__quote-1.0.40//:quote",
-        "@crates_vendor__syn-2.0.106//:syn",
-        "@crates_vendor__wasm-bindgen-backend-0.2.103//:wasm_bindgen_backend",
-        "@crates_vendor__wasm-bindgen-shared-0.2.103//:wasm_bindgen_shared",
+        "@crates_vendor__hashbrown-0.14.5//:hashbrown",
+        "@crates_vendor__new_debug_unreachable-1.0.6//:debug_unreachable",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__rustc-hash-2.1.1//:rustc_hash",
+        "@crates_vendor__triomphe-0.1.14//:triomphe",
     ],
 )
