--- a/deps/rust/crates/BUILD.js-sys-0.3.81.bazel
+++ b/deps/rust/crates/BUILD.js-sys-0.3.81.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
+load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_proc_macro(
-    name = "serde_derive",
+rust_library(
+    name = "js_sys",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,9 +28,6 @@ rust_proc_macro(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -38,15 +35,14 @@ rust_proc_macro(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_derive",
+        "crate-name=js-sys",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.225",
+    version = "0.3.81",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.101//:proc_macro2",
-        "@crates_vendor__quote-1.0.40//:quote",
-        "@crates_vendor__syn-2.0.106//:syn",
+        "@crates_vendor__once_cell-1.21.3//:once_cell",
+        "@crates_vendor__wasm-bindgen-0.2.104//:wasm_bindgen",
     ],
 )
