--- a/deps/rust/crates/BUILD.libc-0.2.176.bazel
+++ b/deps/rust/crates/BUILD.libc-0.2.176.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "wasm_bindgen",
+    name = "libc",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,27 +29,26 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "default",
+        "extra_traits",
+        "std",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
-    proc_macro_deps = [
-        "@crates_vendor__wasm-bindgen-macro-0.2.103//:wasm_bindgen_macro",
-    ],
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen",
+        "crate-name=libc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.103",
+    version = "0.2.176",
     deps = [
-        "@crates_vendor__cfg-if-1.0.3//:cfg_if",
-        "@crates_vendor__once_cell-1.21.3//:once_cell",
-        "@crates_vendor__wasm-bindgen-0.2.103//:build_script_build",
-        "@crates_vendor__wasm-bindgen-shared-0.2.103//:wasm_bindgen_shared",
+        "@crates_vendor__libc-0.2.176//:build_script_build",
     ],
 )
 
@@ -72,6 +71,11 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "default",
+        "extra_traits",
+        "std",
+    ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
     data = glob(
@@ -87,21 +91,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    link_deps = [
-        "@crates_vendor__wasm-bindgen-shared-0.2.103//:wasm_bindgen_shared",
-    ],
-    pkg_name = "wasm-bindgen",
+    pkg_name = "libc",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen",
+        "crate-name=libc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.103",
+    version = "0.2.176",
     visibility = ["//visibility:private"],
 )
 
