--- a/deps/rust/crates/BUILD.wasm-bindgen-macro-0.2.104.bazel
+++ b/deps/rust/crates/BUILD.wasm-bindgen-macro-0.2.104.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_library(
-    name = "clap_builder",
+rust_proc_macro(
+    name = "wasm_bindgen_macro",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,10 +28,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "help",
-        "std",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -39,14 +35,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=clap_builder",
+        "crate-name=wasm-bindgen-macro",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "4.5.47",
+    version = "0.2.104",
     deps = [
-        "@crates_vendor__anstyle-1.0.11//:anstyle",
-        "@crates_vendor__clap_lex-0.7.5//:clap_lex",
+        "@crates_vendor__quote-1.0.40//:quote",
+        "@crates_vendor__wasm-bindgen-macro-support-0.2.104//:wasm_bindgen_macro_support",
     ],
 )
