--- a/deps/rust/crates/BUILD.memchr-2.7.6.bazel
+++ b/deps/rust/crates/BUILD.memchr-2.7.6.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "regex_automata",
+    name = "memchr",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -30,28 +30,8 @@ rust_library(
     ),
     crate_features = [
         "alloc",
-        "dfa-onepass",
-        "dfa-search",
-        "hybrid",
-        "meta",
-        "nfa-backtrack",
-        "nfa-pikevm",
-        "nfa-thompson",
-        "perf-inline",
-        "perf-literal",
-        "perf-literal-multisubstring",
-        "perf-literal-substring",
+        "default",
         "std",
-        "syntax",
-        "unicode",
-        "unicode-age",
-        "unicode-bool",
-        "unicode-case",
-        "unicode-gencat",
-        "unicode-perl",
-        "unicode-script",
-        "unicode-segment",
-        "unicode-word-boundary",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -60,15 +40,10 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=regex-automata",
+        "crate-name=memchr",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.4.10",
-    deps = [
-        "@crates_vendor__aho-corasick-1.1.3//:aho_corasick",
-        "@crates_vendor__memchr-2.7.5//:memchr",
-        "@crates_vendor__regex-syntax-0.8.6//:regex_syntax",
-    ],
+    version = "2.7.6",
 )
