--- a/deps/rust/crates/BUILD.regex-1.11.3.bazel
+++ b/deps/rust/crates/BUILD.regex-1.11.3.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "clap_builder",
+    name = "regex",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,8 +29,23 @@ rust_library(
         ],
     ),
     crate_features = [
-        "help",
+        "default",
+        "perf",
+        "perf-backtrack",
+        "perf-cache",
+        "perf-dfa",
+        "perf-inline",
+        "perf-literal",
+        "perf-onepass",
         "std",
+        "unicode",
+        "unicode-age",
+        "unicode-bool",
+        "unicode-case",
+        "unicode-gencat",
+        "unicode-perl",
+        "unicode-script",
+        "unicode-segment",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -39,14 +54,16 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=clap_builder",
+        "crate-name=regex",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "4.5.47",
+    version = "1.11.3",
     deps = [
-        "@crates_vendor__anstyle-1.0.11//:anstyle",
-        "@crates_vendor__clap_lex-0.7.5//:clap_lex",
+        "@crates_vendor__aho-corasick-1.1.3//:aho_corasick",
+        "@crates_vendor__memchr-2.7.6//:memchr",
+        "@crates_vendor__regex-automata-0.4.11//:regex_automata",
+        "@crates_vendor__regex-syntax-0.8.6//:regex_syntax",
     ],
 )
