--- a/deps/rust/crates/BUILD.regex-automata-0.4.11.bazel
+++ b/deps/rust/crates/BUILD.regex-automata-0.4.11.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "regex",
+    name = "regex_automata",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,15 +29,20 @@ rust_library(
         ],
     ),
     crate_features = [
-        "default",
-        "perf",
-        "perf-backtrack",
-        "perf-cache",
-        "perf-dfa",
+        "alloc",
+        "dfa-onepass",
+        "dfa-search",
+        "hybrid",
+        "meta",
+        "nfa-backtrack",
+        "nfa-pikevm",
+        "nfa-thompson",
         "perf-inline",
         "perf-literal",
-        "perf-onepass",
+        "perf-literal-multisubstring",
+        "perf-literal-substring",
         "std",
+        "syntax",
         "unicode",
         "unicode-age",
         "unicode-bool",
@@ -46,6 +51,7 @@ rust_library(
         "unicode-perl",
         "unicode-script",
         "unicode-segment",
+        "unicode-word-boundary",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -54,16 +60,15 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=regex",
+        "crate-name=regex-automata",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.11.2",
+    version = "0.4.11",
     deps = [
         "@crates_vendor__aho-corasick-1.1.3//:aho_corasick",
-        "@crates_vendor__memchr-2.7.5//:memchr",
-        "@crates_vendor__regex-automata-0.4.10//:regex_automata",
+        "@crates_vendor__memchr-2.7.6//:memchr",
         "@crates_vendor__regex-syntax-0.8.6//:regex_syntax",
     ],
 )
