--- a/deps/rust/crates/BUILD.serde_derive-1.0.226.bazel
+++ b/deps/rust/crates/BUILD.serde_derive-1.0.226.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_library")
+load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_library(
-    name = "wasm_bindgen_backend",
+rust_proc_macro(
+    name = "serde_derive",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,6 +28,9 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "default",
+    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -35,18 +38,15 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen-backend",
+        "crate-name=serde_derive",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.103",
+    version = "1.0.226",
     deps = [
-        "@crates_vendor__bumpalo-3.19.0//:bumpalo",
-        "@crates_vendor__log-0.4.28//:log",
         "@crates_vendor__proc-macro2-1.0.101//:proc_macro2",
         "@crates_vendor__quote-1.0.40//:quote",
         "@crates_vendor__syn-2.0.106//:syn",
-        "@crates_vendor__wasm-bindgen-shared-0.2.103//:wasm_bindgen_shared",
     ],
 )
