--- a/deps/rust/crates/BUILD.wasm-bindgen-backend-0.2.104.bazel
+++ b/deps/rust/crates/BUILD.wasm-bindgen-backend-0.2.104.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
+load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_proc_macro(
-    name = "wasm_bindgen_macro",
+rust_library(
+    name = "wasm_bindgen_backend",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,14 +35,18 @@ rust_proc_macro(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=wasm-bindgen-macro",
+        "crate-name=wasm-bindgen-backend",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.2.103",
+    version = "0.2.104",
     deps = [
+        "@crates_vendor__bumpalo-3.19.0//:bumpalo",
+        "@crates_vendor__log-0.4.28//:log",
+        "@crates_vendor__proc-macro2-1.0.101//:proc_macro2",
         "@crates_vendor__quote-1.0.40//:quote",
-        "@crates_vendor__wasm-bindgen-macro-support-0.2.103//:wasm_bindgen_macro_support",
+        "@crates_vendor__syn-2.0.106//:syn",
+        "@crates_vendor__wasm-bindgen-shared-0.2.104//:wasm_bindgen_shared",
     ],
 )
