--- a/deps/rust/crates/BUILD.wasm-bindgen-macro-0.2.104.bazel
+++ b/deps/rust/crates/BUILD.wasm-bindgen-macro-0.2.104.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
 package(default_visibility = ["//visibility:public"])
 
 rust_proc_macro(
-    name = "serde_derive",
+    name = "wasm_bindgen_macro",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,9 +28,6 @@ rust_proc_macro(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -38,15 +35,14 @@ rust_proc_macro(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_derive",
+        "crate-name=wasm-bindgen-macro",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.225",
+    version = "0.2.104",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.101//:proc_macro2",
         "@crates_vendor__quote-1.0.40//:quote",
-        "@crates_vendor__syn-2.0.106//:syn",
+        "@crates_vendor__wasm-bindgen-macro-support-0.2.104//:wasm_bindgen_macro_support",
     ],
 )
