--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -74,13 +74,18 @@ wd_cc_library(
         "worker-source.h",
     ] + ["//src/workerd/api:hdrs"],
     # global CPU-specific options are inconvenient to specify with bazel – just set the options we
-    # need for CRC32C in this target for now.
+    # need for CRC32C and Highway SIMD in this target for now.
     copts = select({
         "@platforms//cpu:aarch64": [
             "-mcrc",
+            "-march=armv8-a+simd",
         ],
         "@platforms//cpu:x86_64": [
             "-msse4.2",
+            "-mavx2",
+            "-mbmi",
+            "-mbmi2",
+            "-mfma",
         ],
     }),
     implementation_deps = [
@@ -88,6 +93,7 @@ wd_cc_library(
         "//src/workerd/util:string-buffer",
         "@capnp-cpp//src/kj/compat:kj-brotli",
         "@capnp-cpp//src/kj/compat:kj-gzip",
+        "@highway//:hwy",
         "@nbytes",
         "@simdutf",
     ],
