--- a/deps/rust/crates/BUILD.cc-1.2.39.bazel
+++ b/deps/rust/crates/BUILD.cc-1.2.39.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "gimli",
+    name = "cc",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -35,10 +35,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=gimli",
+        "crate-name=cc",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "0.31.1",
+    version = "1.2.39",
+    deps = [
+        "@crates_vendor__find-msvc-tools-0.1.2//:find_msvc_tools",
+        "@crates_vendor__shlex-1.3.0//:shlex",
+    ],
 )
