--- a/deps/rust/crates/BUILD.gimli-0.32.3.bazel
+++ b/deps/rust/crates/BUILD.gimli-0.32.3.bazel
@@ -6,12 +6,12 @@
 #     bazel run @@//deps/rust:crates_vendor
 ###############################################################################
 
-load("@rules_rust//rust:defs.bzl", "rust_proc_macro")
+load("@rules_rust//rust:defs.bzl", "rust_library")
 
 package(default_visibility = ["//visibility:public"])
 
-rust_proc_macro(
-    name = "serde_derive",
+rust_library(
+    name = "gimli",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,25 +28,17 @@ rust_proc_macro(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-    ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_derive",
+        "crate-name=gimli",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.226",
-    deps = [
-        "@crates_vendor__proc-macro2-1.0.101//:proc_macro2",
-        "@crates_vendor__quote-1.0.40//:quote",
-        "@crates_vendor__syn-2.0.106//:syn",
-    ],
+    version = "0.32.3",
 )
