--- a/deps/rust/crates/BUILD.object-0.37.3.bazel
+++ b/deps/rust/crates/BUILD.object-0.37.3.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "serde_core",
+    name = "object",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,28 +29,22 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "alloc",
-        "default",
-        "rc",
-        "result",
-        "std",
-    ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_core",
+        "crate-name=object",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.226",
+    version = "0.37.3",
     deps = [
-        "@crates_vendor__serde_core-1.0.226//:build_script_build",
+        "@crates_vendor__memchr-2.7.6//:memchr",
+        "@crates_vendor__object-0.37.3//:build_script_build",
     ],
 )
 
@@ -73,13 +67,6 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "alloc",
-        "default",
-        "rc",
-        "result",
-        "std",
-    ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
     data = glob(
@@ -94,19 +81,19 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    edition = "2021",
-    pkg_name = "serde_core",
+    edition = "2018",
+    pkg_name = "object",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=serde_core",
+        "crate-name=object",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.226",
+    version = "0.37.3",
     visibility = ["//visibility:private"],
 )
 
