--- a/deps/rust/crates/BUILD.camino-1.2.1.bazel
+++ b/deps/rust/crates/BUILD.camino-1.2.1.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "lolhtml",
+    name = "camino",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -30,8 +30,7 @@ rust_library(
         ],
     ),
     crate_features = [
-        "capi",
-        "default",
+        "serde1",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -40,18 +39,15 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=lol_html_c_api",
+        "crate-name=camino",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.3.0",
+    version = "1.2.1",
     deps = [
-        "@crates_vendor__encoding_rs-0.8.35//:encoding_rs",
-        "@crates_vendor__libc-0.2.176//:libc",
-        "@crates_vendor__lol_html-2.6.0//:lol_html",
-        "@crates_vendor__lol_html_c_api-1.3.0//:build_script_build",
-        "@crates_vendor__thiserror-2.0.17//:thiserror",
+        "@crates_vendor__camino-1.2.1//:build_script_build",
+        "@crates_vendor__serde_core-1.0.228//:serde_core",
     ],
 )
 
@@ -75,8 +71,7 @@ cargo_build_script(
         ],
     ),
     crate_features = [
-        "capi",
-        "default",
+        "serde1",
     ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
@@ -93,19 +88,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    links = "lolhtml",
-    pkg_name = "lol_html_c_api",
+    pkg_name = "camino",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=lol_html_c_api",
+        "crate-name=camino",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.3.0",
+    version = "1.2.1",
     visibility = ["//visibility:private"],
 )
 
