--- a/deps/rust/crates/BUILD.jobserver-0.1.34.bazel
+++ b/deps/rust/crates/BUILD.jobserver-0.1.34.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "cc",
+    name = "jobserver",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,38 +28,34 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "parallel",
-    ],
     crate_root = "src/lib.rs",
-    edition = "2018",
+    edition = "2021",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=cc",
+        "crate-name=jobserver",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.2.39",
-    deps = [
-        "@crates_vendor__find-msvc-tools-0.1.2//:find_msvc_tools",
-        "@crates_vendor__jobserver-0.1.34//:jobserver",
-        "@crates_vendor__shlex-1.3.0//:shlex",
-    ] + select({
+    version = "0.1.34",
+    deps = select({
         "@rules_rust//rust/platform:aarch64-apple-darwin": [
-            "@crates_vendor__libc-0.2.176//:libc",  # aarch64-apple-darwin
+            "@crates_vendor__libc-0.2.176//:libc",  # cfg(unix)
         ],
         "@rules_rust//rust/platform:aarch64-unknown-linux-gnu": [
-            "@crates_vendor__libc-0.2.176//:libc",  # aarch64-unknown-linux-gnu
+            "@crates_vendor__libc-0.2.176//:libc",  # cfg(unix)
         ],
         "@rules_rust//rust/platform:x86_64-apple-darwin": [
-            "@crates_vendor__libc-0.2.176//:libc",  # x86_64-apple-darwin
+            "@crates_vendor__libc-0.2.176//:libc",  # cfg(unix)
+        ],
+        "@rules_rust//rust/platform:x86_64-pc-windows-msvc": [
+            "@crates_vendor__getrandom-0.3.3//:getrandom",  # cfg(windows)
         ],
         "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": [
-            "@crates_vendor__libc-0.2.176//:libc",  # x86_64-unknown-linux-gnu
+            "@crates_vendor__libc-0.2.176//:libc",  # cfg(unix)
         ],
         "//conditions:default": [],
     }),
