--- a/deps/rust/crates/BUILD.bazel
+++ b/deps/rust/crates/BUILD.bazel
@@ -32,6 +32,18 @@ filegroup(
 
 # Workspace Member Dependencies
 alias(
+    name = "ada-url-3.3.0",
+    actual = "@crates_vendor__ada-url-3.3.0//:ada_url",
+    tags = ["manual"],
+)
+
+alias(
+    name = "ada-url",
+    actual = "@crates_vendor__ada-url-3.3.0//:ada_url",
+    tags = ["manual"],
+)
+
+alias(
     name = "anyhow-1.0.100",
     actual = "@crates_vendor__anyhow-1.0.100//:anyhow",
     tags = ["manual"],
@@ -92,14 +104,14 @@ alias(
 )
 
 alias(
-    name = "clang-ast-0.1.33",
-    actual = "@crates_vendor__clang-ast-0.1.33//:clang_ast",
+    name = "clang-ast-0.1.35",
+    actual = "@crates_vendor__clang-ast-0.1.35//:clang_ast",
     tags = ["manual"],
 )
 
 alias(
     name = "clang-ast",
-    actual = "@crates_vendor__clang-ast-0.1.33//:clang_ast",
+    actual = "@crates_vendor__clang-ast-0.1.35//:clang_ast",
     tags = ["manual"],
 )
 
@@ -212,14 +224,14 @@ alias(
 )
 
 alias(
-    name = "quote-1.0.40",
-    actual = "@crates_vendor__quote-1.0.40//:quote",
+    name = "quote-1.0.41",
+    actual = "@crates_vendor__quote-1.0.41//:quote",
     tags = ["manual"],
 )
 
 alias(
     name = "quote",
-    actual = "@crates_vendor__quote-1.0.40//:quote",
+    actual = "@crates_vendor__quote-1.0.41//:quote",
     tags = ["manual"],
 )
 
@@ -344,14 +356,14 @@ alias(
 )
 
 alias(
-    name = "thiserror-2.0.16",
-    actual = "@crates_vendor__thiserror-2.0.16//:thiserror",
+    name = "thiserror-2.0.17",
+    actual = "@crates_vendor__thiserror-2.0.17//:thiserror",
     tags = ["manual"],
 )
 
 alias(
     name = "thiserror",
-    actual = "@crates_vendor__thiserror-2.0.16//:thiserror",
+    actual = "@crates_vendor__thiserror-2.0.17//:thiserror",
     tags = ["manual"],
 )
 
