--- a/deps/rust/crates/BUILD.cc-1.2.39.bazel
+++ b/deps/rust/crates/BUILD.cc-1.2.39.bazel
@@ -28,6 +28,9 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
+    crate_features = [
+        "parallel",
+    ],
     crate_root = "src/lib.rs",
     edition = "2018",
     rustc_flags = [
@@ -43,6 +46,21 @@ rust_library(
     version = "1.2.39",
     deps = [
         "@crates_vendor__find-msvc-tools-0.1.2//:find_msvc_tools",
+        "@crates_vendor__jobserver-0.1.34//:jobserver",
         "@crates_vendor__shlex-1.3.0//:shlex",
-    ],
+    ] + select({
+        "@rules_rust//rust/platform:aarch64-apple-darwin": [
+            "@crates_vendor__libc-0.2.176//:libc",  # aarch64-apple-darwin
+        ],
+        "@rules_rust//rust/platform:aarch64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.176//:libc",  # aarch64-unknown-linux-gnu
+        ],
+        "@rules_rust//rust/platform:x86_64-apple-darwin": [
+            "@crates_vendor__libc-0.2.176//:libc",  # x86_64-apple-darwin
+        ],
+        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.176//:libc",  # x86_64-unknown-linux-gnu
+        ],
+        "//conditions:default": [],
+    }),
 )
