--- a/deps/rust/crates/BUILD.getrandom-0.3.3.bazel
+++ b/deps/rust/crates/BUILD.getrandom-0.3.3.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "camino",
+    name = "getrandom",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -30,7 +30,7 @@ rust_library(
         ],
     ),
     crate_features = [
-        "serde1",
+        "std",
     ],
     crate_root = "src/lib.rs",
     edition = "2021",
@@ -39,16 +39,30 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=camino",
+        "crate-name=getrandom",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.2.0",
+    version = "0.3.3",
     deps = [
-        "@crates_vendor__camino-1.2.0//:build_script_build",
-        "@crates_vendor__serde_core-1.0.228//:serde_core",
-    ],
+        "@crates_vendor__cfg-if-1.0.3//:cfg_if",
+        "@crates_vendor__getrandom-0.3.3//:build_script_build",
+    ] + select({
+        "@rules_rust//rust/platform:aarch64-apple-darwin": [
+            "@crates_vendor__libc-0.2.176//:libc",  # cfg(any(target_os = "macos", target_os = "openbsd", target_os = "vita", target_os = "emscripten"))
+        ],
+        "@rules_rust//rust/platform:aarch64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.176//:libc",  # cfg(all(any(target_os = "linux", target_os = "android"), not(any(all(target_os = "linux", target_env = ""), getrandom_backend = "custom", getrandom_backend = "linux_raw", getrandom_backend = "rdrand", getrandom_backend = "rndr"))))
+        ],
+        "@rules_rust//rust/platform:x86_64-apple-darwin": [
+            "@crates_vendor__libc-0.2.176//:libc",  # cfg(any(target_os = "macos", target_os = "openbsd", target_os = "vita", target_os = "emscripten"))
+        ],
+        "@rules_rust//rust/platform:x86_64-unknown-linux-gnu": [
+            "@crates_vendor__libc-0.2.176//:libc",  # cfg(all(any(target_os = "linux", target_os = "android"), not(any(all(target_os = "linux", target_env = ""), getrandom_backend = "custom", getrandom_backend = "linux_raw", getrandom_backend = "rdrand", getrandom_backend = "rndr"))))
+        ],
+        "//conditions:default": [],
+    }),
 )
 
 cargo_build_script(
@@ -71,7 +85,7 @@ cargo_build_script(
         ],
     ),
     crate_features = [
-        "serde1",
+        "std",
     ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
@@ -88,18 +102,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    pkg_name = "camino",
+    pkg_name = "getrandom",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=camino",
+        "crate-name=getrandom",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.2.0",
+    version = "0.3.3",
     visibility = ["//visibility:private"],
 )
 
