--- a/deps/rust/crates/BUILD.link_args-0.6.0.bazel
+++ b/deps/rust/crates/BUILD.link_args-0.6.0.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "anstyle",
+    name = "link_args",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,21 +28,17 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "std",
-    ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=anstyle",
+        "crate-name=link_args",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.11",
+    version = "0.6.0",
 )
