--- a/deps/rust/crates/BUILD.quote-1.0.41.bazel
+++ b/deps/rust/crates/BUILD.quote-1.0.41.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "lolhtml",
+    name = "quote",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -30,28 +30,25 @@ rust_library(
         ],
     ),
     crate_features = [
-        "capi",
         "default",
+        "proc-macro",
     ],
     crate_root = "src/lib.rs",
-    edition = "2021",
+    edition = "2018",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=lol_html_c_api",
+        "crate-name=quote",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.3.0",
+    version = "1.0.41",
     deps = [
-        "@crates_vendor__encoding_rs-0.8.35//:encoding_rs",
-        "@crates_vendor__libc-0.2.176//:libc",
-        "@crates_vendor__lol_html-2.6.0//:lol_html",
-        "@crates_vendor__lol_html_c_api-1.3.0//:build_script_build",
-        "@crates_vendor__thiserror-2.0.17//:thiserror",
+        "@crates_vendor__proc-macro2-1.0.101//:proc_macro2",
+        "@crates_vendor__quote-1.0.41//:build_script_build",
     ],
 )
 
@@ -75,8 +72,8 @@ cargo_build_script(
         ],
     ),
     crate_features = [
-        "capi",
         "default",
+        "proc-macro",
     ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
@@ -92,20 +89,19 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    edition = "2021",
-    links = "lolhtml",
-    pkg_name = "lol_html_c_api",
+    edition = "2018",
+    pkg_name = "quote",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=lol_html_c_api",
+        "crate-name=quote",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.3.0",
+    version = "1.0.41",
     visibility = ["//visibility:private"],
 )
 
