--- a/deps/rust/crates/BUILD.r-efi-5.3.0.bazel
+++ b/deps/rust/crates/BUILD.r-efi-5.3.0.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "quote",
+    name = "r_efi",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,10 +28,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "default",
-        "proc-macro",
-    ],
     crate_root = "src/lib.rs",
     edition = "2018",
     rustc_flags = [
@@ -39,13 +35,10 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=quote",
+        "crate-name=r-efi",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.0.40",
-    deps = [
-        "@crates_vendor__proc-macro2-1.0.101//:proc_macro2",
-    ],
+    version = "5.3.0",
 )
