--- a/deps/rust/crates/BUILD.wasip2-1.0.1+wasi-0.2.4.bazel
+++ b/deps/rust/crates/BUILD.wasip2-1.0.1+wasi-0.2.4.bazel
@@ -11,7 +11,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "syn",
+    name = "wasip2",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -28,19 +28,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "clone-impls",
-        "default",
-        "derive",
-        "extra-traits",
-        "fold",
-        "full",
-        "parsing",
-        "printing",
-        "proc-macro",
-        "visit",
-        "visit-mut",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -48,15 +35,13 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=syn",
+        "crate-name=wasip2",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "2.0.106",
+    version = "1.0.1+wasi-0.2.4",
     deps = [
-        "@crates_vendor__proc-macro2-1.0.101//:proc_macro2",
-        "@crates_vendor__quote-1.0.41//:quote",
-        "@crates_vendor__unicode-ident-1.0.19//:unicode_ident",
+        "@crates_vendor__wit-bindgen-0.46.0//:wit_bindgen",
     ],
 )
