--- a/deps/rust/crates/BUILD.wit-bindgen-0.46.0.bazel
+++ b/deps/rust/crates/BUILD.wit-bindgen-0.46.0.bazel
@@ -12,7 +12,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "lolhtml",
+    name = "wit_bindgen",
     srcs = glob(
         include = ["**/*.rs"],
         allow_empty = True,
@@ -29,10 +29,6 @@ rust_library(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "capi",
-        "default",
-    ],
     crate_root = "src/lib.rs",
     edition = "2021",
     rustc_flags = [
@@ -40,18 +36,14 @@ rust_library(
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=lol_html_c_api",
+        "crate-name=wit-bindgen",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.3.0",
+    version = "0.46.0",
     deps = [
-        "@crates_vendor__encoding_rs-0.8.35//:encoding_rs",
-        "@crates_vendor__libc-0.2.176//:libc",
-        "@crates_vendor__lol_html-2.6.0//:lol_html",
-        "@crates_vendor__lol_html_c_api-1.3.0//:build_script_build",
-        "@crates_vendor__thiserror-2.0.17//:thiserror",
+        "@crates_vendor__wit-bindgen-0.46.0//:build_script_build",
     ],
 )
 
@@ -74,10 +66,6 @@ cargo_build_script(
             "WORKSPACE.bazel",
         ],
     ),
-    crate_features = [
-        "capi",
-        "default",
-    ],
     crate_name = "build_script_build",
     crate_root = "build.rs",
     data = glob(
@@ -93,19 +81,18 @@ cargo_build_script(
         ],
     ),
     edition = "2021",
-    links = "lolhtml",
-    pkg_name = "lol_html_c_api",
+    pkg_name = "wit-bindgen",
     rustc_flags = [
         "--cap-lints=allow",
     ],
     tags = [
         "cargo-bazel",
-        "crate-name=lol_html_c_api",
+        "crate-name=wit-bindgen",
         "manual",
         "noclippy",
         "norustfmt",
     ],
-    version = "1.3.0",
+    version = "0.46.0",
     visibility = ["//visibility:private"],
 )
 
