Tracing helpers instrumentations test.

--- a/src/cloudflare/internal/test/d1/BUILD.bazel
+++ b/src/cloudflare/internal/test/d1/BUILD.bazel
@@ -7,7 +7,7 @@ wd_test(
     data = glob(
         ["*.js"],
         exclude = ["d1-api-test-with-sessions.js"],
-    ),
+    ) + ["//src/cloudflare/internal/test:instrumentation-test-helper.js"],
 )
 
 wd_test(
