--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -16,6 +16,12 @@ wd_cc_embed(
     strip_include_prefix = "",
     visibility = ["//visibility:public"],
 )
+# Also re-export the v8 ICU library for @workerd-v8
+alias(
+    name = "v8_icu",
+    actual = "@v8//:v8_icu",
+    visibility = ["//visibility:public"],
+)
 
 npm_link_all_packages(name = "node_modules")
 
