[o11y] Merge PipelineTracer with downstream version

--- a/src/workerd/io/BUILD.bazel
+++ b/src/workerd/io/BUILD.bazel
@@ -27,18 +27,6 @@ wd_cc_library(
 )
 
 wd_cc_library(
-    name = "trace-stream",
-    srcs = ["trace-stream.c++"],
-    hdrs = ["trace-stream.h"],
-    visibility = ["//visibility:public"],
-    deps = [
-        ":io",
-        "//src/workerd/util:checked-queue",
-        "//src/workerd/util:completion-membrane",
-    ],
-)
-
-wd_cc_library(
     name = "io",
     # HACK: Currently, the `io` and `api` packages are interdependent. We fold all the sources
     #   from `api` into `io`. In principle, it should be possible to pull them apart so `api`
@@ -54,6 +42,7 @@ wd_cc_library(
         "io-context.c++",
         "io-own.c++",
         "io-util.c++",
+        "trace-stream.c++",
         "tracer.c++",
         "worker.c++",
         "worker-fs.c++",
@@ -68,6 +57,7 @@ wd_cc_library(
         "io-own.h",
         "io-util.h",
         "promise-wrapper.h",
+        "trace-stream.h",
         "tracer.h",
         "worker.h",
         "worker-fs.h",
